--- a/supervisely/visualization/src/ui/embeddings.html
+++ b/supervisely/visualization/src/ui/embeddings.html
@@ -1,4 +1,4 @@
-<sly-card title="Embedding embedding files to process"
+<sly-card title="Select reference embeddings"
           subtitle="select the files you want to use"
           :options="{collapsable: true}"
           :collapsed.sync="state.collapsed3"
@@ -25,7 +25,7 @@
     </el-button>
     <div v-if="data.done3">
         <i class="zmdi zmdi-check-circle mr5" style="color: #13ce66"></i>
-        <span style="color: #5a6772;">Checkpoint path has been successfully set</span>
+        <span style="color: #5a6772;">Embeddings successfully loaded</span>
     </div>
 </sly-card>
 
