--- a/supervisely/visualization/src/ui/infer_project.html
+++ b/supervisely/visualization/src/ui/infer_project.html
@@ -9,7 +9,11 @@
     <el-button type="primary" class="regular"
                @click="state.modelLoading=true; command('infer_project');"
                :loading="state.inferProject"
-               v-if="data.done3">
-        infer project
+               :disabled="data.done4">
+        Calculate embeddings for test project
     </el-button>
+    <div v-if="data.done4">
+            <i class="zmdi zmdi-check-circle mr5 mt15" style="color: #13ce66"></i>
+            <span style="color: #5a6772;">Embeddings are calculated</span>
+        </div>
 </sly-card>
