--- a/supervisely/visualization/src/ui/embeddings.html
+++ b/supervisely/visualization/src/ui/embeddings.html
@@ -15,14 +15,15 @@
                     :value="emb_path">
             </el-option>
         </el-select>
+        <el-button type="primary" class="regular"
+                   @click="state.modelLoading=true; command('download_selected_embeddings');"
+                   :loading="state.modelLoading"
+                   :disabled="state.selectedEmbeddings.length===0"
+                   v-if="!data.done3">
+            load selected embeddings
+        </el-button>
     </sly-field>
-    <el-button type="primary" class="regular"
-               @click="state.modelLoading=true; command('download_selected_embeddings');"
-               :loading="state.modelLoading"
-               :disabled="!state.selectedEmbeddings"
-               v-if="!data.done3">
-        load selected embeddings
-    </el-button>
+
     <div v-if="data.done3">
         <i class="zmdi zmdi-check-circle mr5" style="color: #13ce66"></i>
         <span style="color: #5a6772;">Embeddings successfully loaded</span>
