grid gallery updated

--- a/supervisely/visualization/src/gui.html
+++ b/supervisely/visualization/src/gui.html
@@ -36,6 +36,11 @@
         #mmdetection-train .el-tabs.el-tabs-cards .el-tabs__item { flex: 1; margin-bottom: -3px; padding: 9px 16px
         13px;
         height: auto; line-height: normal; border-radius: 4px; }
+
+        .card-footer {
+        display: flex;
+        justify-content: center;
+        }
     </sly-style>
 
     <sly-stepper :active="state.activeStep">
