--- a/supervisely/serve/src/modal.html
+++ b/supervisely/serve/src/modal.html
@@ -64,8 +64,8 @@
                     </tbody>
                 </table>
             </el-tab-pane>
-            <el-tab-pane name="custom" :disabled="True">
-                <el-radio slot="label" v-model="state.modelWeightsOptions" label="custom" :disabled="True">
+            <el-tab-pane name="custom" :disabled="true">
+                <el-radio slot="label" v-model="state.modelWeightsOptions" label="custom" :disabled="true">
                     Custom
                 </el-radio>
                 <sly-field title="Weights path" description="Copy path in Team Files">
