--- a/supervisely/labeling-tool/src/ui/connector_first_step.html
+++ b/supervisely/labeling-tool/src/ui/connector_first_step.html
@@ -3,9 +3,18 @@
                description="select served Metric Learning model"
                style="margin-left: 5px;"
     >
-        <sly-icon slot="icon" :options="{ color: '#2cd26e', bgColor: '#d8f8e7', rounded: false }">
+        <sly-icon
+                v-if="!state.done1"
+                slot="icon" :options="{ color: '#ffffff', bgColor: '#fe5a1d', rounded: false }">
             <i class="zmdi zmdi-memory"></i>
         </sly-icon>
+        <sly-icon
+                v-if="state.done1"
+                slot="icon" :options="{ color: '#ffffff', bgColor: '#51c21d', rounded: false }">
+                <i class="zmdi zmdi-memory"></i>
+        </sly-icon>
+
+
 
     </sly-field>
     <div class="fflex">
@@ -26,10 +35,10 @@
         </el-button>
 
     </div>
-    <div class="mt5"
-         v-if="state.done1">
-        <i class="zmdi zmdi-check-circle mr5 mt15 mb10" style="color: #14ce66"></i>
-        <span style="color: #5a6772;">successfully connected</span>
-    </div>
+<!--    <div class="mt5"-->
+<!--         v-if="state.done1">-->
+<!--        <i class="zmdi zmdi-check-circle mr5 mt15 mb10" style="color: #14ce66"></i>-->
+<!--        <span style="color: #5a6772;">successfully connected</span>-->
+<!--    </div>-->
 
 </sly-card>
