--- a/supervisely/labeling-tool/src/ui/connector_second_step.html
+++ b/supervisely/labeling-tool/src/ui/connector_second_step.html
@@ -7,8 +7,17 @@
                style="margin-left: 5px;"
 
     >
-        <sly-icon slot="icon" :options="{ color: '#2cd26e', bgColor: '#d8f8e7', rounded: false }">
+
+
+        <sly-icon
+                v-if="!state.done2"
+                slot="icon" :options="{ color: '#ffffff', bgColor: '#fe5a1d', rounded: false }">
             <i class="zmdi zmdi-blur"></i>
+        </sly-icon>
+        <sly-icon
+                v-if="state.done2"
+                slot="icon" :options="{ color: '#ffffff', bgColor: '#51c21d', rounded: false }">
+                <i class="zmdi zmdi-blur"></i>
         </sly-icon>
 
     </sly-field>
@@ -29,9 +38,9 @@
             connect
         </el-button>
     </div>
-     <div class="mt5"
-         v-if="state.done2">
-        <i class="zmdi zmdi-check-circle mr5 mt15 mb10" style="color: #14ce66"></i>
-        <span style="color: #5a6772;">successfully connected</span>
-    </div>
+<!--     <div class="mt5"-->
+<!--         v-if="state.done2">-->
+<!--        <i class="zmdi zmdi-check-circle mr5 mt15 mb10" style="color: #14ce66"></i>-->
+<!--        <span style="color: #5a6772;">successfully connected</span>-->
+<!--    </div>-->
 </sly-card>
