adding near labels functional

--- a/supervisely/labeling-tool/src/ui/settings_tab.html
+++ b/supervisely/labeling-tool/src/ui/settings_tab.html
@@ -15,7 +15,7 @@
     <sly-field
             style="padding-top: 8px"
             title="Object padding"
-            description="crop padding outside image patch">
+            description="padding outside image patch">
         <div class="fflex">
             <el-input-number
                     class="mt5"
