--- a/supervisely/labeling-tool/src/gui.html
+++ b/supervisely/labeling-tool/src/gui.html
@@ -101,12 +101,8 @@
                     {% include 'src/ui/info_tab.html' %}
                 </el-tab-pane>
                 <el-tab-pane label="PREDICTIONS" name="predictions">
-                    <span slot="label"><i class="zmdi zmdi-fire mr5"></i>PREDICTIONS</span>
+                    <span slot="label"><i class="zmdi zmdi-tag mr5"></i>TAGGING</span>
                     {% include 'src/ui/predictions_tab.html' %}
-                </el-tab-pane>
-                <el-tab-pane label="REVIEW" name="review">
-                    <span slot="label"><i class="zmdi zmdi-view-dashboard mr5"></i>REVIEW</span>
-                    {% include 'src/ui/review_tab.html' %}
                 </el-tab-pane>
                 <el-tab-pane label="SETTINGS" name="settings">
                     <span slot="label"><i class="zmdi zmdi-settings mr5"></i>SETTINGS</span>
