moving to database tab

--- a/supervisely/labeling-tool/src/ui/connector_first_step.html
+++ b/supervisely/labeling-tool/src/ui/connector_first_step.html
@@ -20,7 +20,7 @@
     <div class="fflex">
         <sly-select-app-session :group-id="data.teamId"
                                 :app-session-id.sync="state.nnId"
-                                :options="data.ssOptions"
+                                :options="data.ssOptionsNN"
                                 :disabled="state.done1">
         </sly-select-app-session>
         <el-button class="ml10"
