--- a/supervisely/labeling-tool/src/ui/connector_second_step.html
+++ b/supervisely/labeling-tool/src/ui/connector_second_step.html
@@ -24,7 +24,7 @@
     <div class="fflex">
         <sly-select-app-session :group-id="data.teamId"
                                 :app-session-id.sync="state.calculatorId"
-                                :options="data.ssOptions"
+                                :options="data.ssOptionsCalculator"
                                 :disabled="state.done2">
         </sly-select-app-session>
         <el-button class="ml10"
