--- a/supervisely/labeling-tool/src/gui.html
+++ b/supervisely/labeling-tool/src/gui.html
@@ -1,11 +1,11 @@
-<div>
+<div id="gl-ml-labeling-tool">
     <div v-if="context.userId !== data.ownerId" style="color: red;">
         You don't have permissions to open this application session.
     </div>
 
     <div v-if="context.userId === data.ownerId">
         <sly-style>
-            #ai-assisted-tagging {
+            #gl-ml-labeling-tool {
             }
             #small_table.tiny-table table thead th {
             font-size: 10px;
@@ -22,34 +22,46 @@
             #small_tabs .el-tabs__header {
             background: white;
             }
-            #ai-assisted-tagging .app-header {
+            #gl-ml-labeling-tool .app-header {
             background: white;
             }
-            #ai-assisted-tagging .grid-gallery-views-scene.img-grid-gallery {
+            #gl-ml-labeling-tool .grid-gallery-views-scene.img-grid-gallery {
             z-index: 0;
             }
-            #ai-assisted-tagging {
+            #gl-ml-labeling-tool {
             position: absolute;
             top: 0;
             bottom: 0;
             right: 0;
             left: 0;
             }
-            #ai-assisted-tagging .el-tabs {
+            #gl-ml-labeling-tool .el-tabs {
             display: flex;
             flex-direction: column;
             height: calc(100% - 60px);
             }
-            #ai-assisted-tagging .el-tabs__content {
+            #gl-ml-labeling-tool .el-tabs__content {
             overflow: scroll;
             }
-            #ai-assisted-tagging .el-tabs__header {
+            #gl-ml-labeling-tool .el-tabs__header {
             margin-bottom: 0
             }
-            #ai-assisted-tagging .xxx .el-collapse-item__header {
+            #gl-ml-labeling-tool .xxx .el-collapse-item__header {
             height: 30px;
             line-height: 30px;
             background: #f8f9fc;
+            }
+
+            .slider-wrapper {
+            width: 250 px;
+            }
+
+            .slider-wrapper .slider-tape {
+            width: 250 px;
+            }
+
+            .sly-image-slider .slider-wrapper .slider-tape {
+            overflow: hidden;
             }
 
         </sly-style>
@@ -57,7 +69,7 @@
 
         <sly-stepper :active="state.activeStep"
                      class="ml15 mt5"
-        v-if="context.userId === data.ownerId && !state.done2">
+                     v-if="context.userId === data.ownerId && !state.done2">
             <sly-stepper-item>
                 {% include 'src/ui/connector_first_step.html' %}
             </sly-stepper-item>
@@ -67,49 +79,32 @@
         </sly-stepper>
 
 
-        <div id="ai-assisted-tagging"
-             v-if="context.userId === data.ownerId && state.done2"
-             class="ml5 mr10"
-             style="margin-left: 2px; margin-right: 2px;"
+        <!--        <div id="gl-ml-labeling-tool"-->
+        <!--             v-if="context.userId === data.ownerId && state.done2"-->
+        <!--             class="ml5 mr10"-->
+        <!--             style="margin-left: 2px; margin-right: 2px;"-->
+        <!--        >-->
+        <!--            -->
+        <!--            <hr style="border: 0; border-top: 1px solid rgba(0,0,0,.12);"/>-->
+        <el-tabs id="small_tabs" v-model="state.tabName"
+                 v-if="context.userId === data.ownerId && state.done2"
         >
-            <div class="app-header">
-                <div class="fflex" style="justify-content: space-between">
-                    <div class="fflex">
-                        <el-button size="small" type="primary"
-                                   class="mt5 ml5 mb5"
-                                   v-if="state.applyTo === 'object'"
-                                   @click="state.loading = true; command('prev_object');"
-                                   :loading="state.loading"
-                        >
-                            <i class="zmdi zmdi-arrow-left ml5"></i> Prev {{state.applyTo}}
-                        </el-button>
-                        <el-button size="small" type="primary"
-                                   class="mt5 ml5 mb5"
-                                   v-if="state.applyTo === 'object'"
-                                   @click="state.loading = true; command('next_object');"
-                                   :loading="state.loading"
-                        >
-                            Next {{state.applyTo}} <i class="zmdi zmdi-arrow-right ml5"></i>
-                        </el-button>
-                    </div>
-                </div>
-            </div>
-            <hr style="border: 0; border-top: 1px solid rgba(0,0,0,.12);"/>
-            <el-tabs id="small_tabs" v-model="state.tabName">
-                <el-tab-pane label="INFO" name="info">
-                    <span slot="label"><i class="zmdi zmdi-info mr5"></i></i>INFO</span>
-                    {% include 'src/ui/info_tab.html' %}
-                </el-tab-pane>
-                <el-tab-pane label="PREDICTIONS" name="predictions">
-                    <span slot="label"><i class="zmdi zmdi-tag mr5"></i>TAGGING</span>
-                    {% include 'src/ui/predictions_tab.html' %}
-                </el-tab-pane>
-                <el-tab-pane label="SETTINGS" name="settings">
-                    <span slot="label"><i class="zmdi zmdi-settings mr5"></i>SETTINGS</span>
-                    {% include 'src/ui/settings_tab.html' %}
-                </el-tab-pane>
-            </el-tabs>
-        </div>
-
+            <el-tab-pane label="INFO" name="info">
+                <span slot="label"><i class="zmdi zmdi-info mr5"></i></i>INFO</span>
+                {% include 'src/ui/info_tab.html' %}
+            </el-tab-pane>
+            <el-tab-pane label="TAGS" name="tags">
+                <span slot="label"><i class="zmdi zmdi-tag mr5"></i>TAGS</span>
+                {% include 'src/ui/tags_tab.html' %}
+            </el-tab-pane>
+            <el-tab-pane label="DATABASE" name="database">
+                <span slot="label"><i class="zmdi zmdi-storage mr5"></i>DATABASE</span>
+                {% include 'src/ui/database_tab.html' %}
+            </el-tab-pane>
+            <el-tab-pane label="SETTINGS" name="settings">
+                <span slot="label"><i class="zmdi zmdi-settings mr5"></i>SETTINGS</span>
+                {% include 'src/ui/settings_tab.html' %}
+            </el-tab-pane>
+        </el-tabs>
     </div>
 </div>
