going to reference button

--- a/supervisely/labeling-tool/src/ui/connector_second_step.html
+++ b/supervisely/labeling-tool/src/ui/connector_second_step.html
@@ -2,8 +2,8 @@
         :disabled="{disabled: !state.done1, message: 'complete stage 1 to unlock'}"
 
 >
-    <sly-field title="Connect to Calculator"
-               description="select served Similarity Calculator"
+    <sly-field title="Connect to AI Recommendations"
+               description="select served AI Recommendations"
                style="margin-left: 5px;"
 
     >
