--- a/supervisely/labeling-tool/src/ui/info_tab.html
+++ b/supervisely/labeling-tool/src/ui/info_tab.html
@@ -1,7 +1,7 @@
 <div>
     <sly-card class="mt5 mb5">
         <sly-field title="Model"
-                   description="below stats"
+                   description="stats"
                    style="padding-top: 4px; padding-bottom: 6px">
             <sly-icon
                     slot="icon" :options="{ color: '#ffffff', bgColor: '#51c21d', rounded: false }">
@@ -19,7 +19,7 @@
 
     <sly-card class="mt5 mb5">
         <sly-field title="Reference Embeddings"
-                   description="below stats"
+                   description="stats"
                    style="padding-top: 4px; padding-bottom: 6px">
             <sly-icon
                 slot="icon" :options="{ color: '#ffffff', bgColor: '#51c21d', rounded: false }">
